# containerfs

./: .gitignore  BasePresets.json  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg.json
.github/workflows/: ci.yml
include/containerfs/: device_api.h  error.h  file_device.h  filesystem.h  namespace.h  ole.h  ole_directory.h  ole_error.h  ole_path.cpp  ole_path.h  ole_string.cpp  ole_string.h
include/ole/: device_api.h  directory.h  error.h  file_device.h  filesystem.h  ole.h  path.cpp  path.h  string.cpp  string.h
sources/: filesystem.cpp  ole.cpp
test/: AddOleFixture.cmake  CMakeLists.txt  filesystem_test.cpp  nauka_i_osmislenie.doc  test.tgz  test_read_file.cpp
